# CalendarApp

./: .gitignore  CMakeLists.txt  Readme.md
forms/: Calendar.ui  DayWindow.ui  EventEditorDialog.ui
include/models/: CalendarEngine.h  CalendarEvent.h  DatabaseManager.h
include/ui/: Calendar.h  DayWindow.h  EventEditorDialog.h
resources/: Calendar.qrc
src/: main.cpp
src/models/: CalendarEngine.cpp  DatabaseManager.cpp
src/ui/: Calendar.cpp  DayWindow.cpp  EventEditorDialog.cpp
x64/Debug/: vc145.idb
x64/Debug/CalendarApp.tlog/: CalendarApp.lastbuildstate  CalendarApp.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/qt/qmake/: .qmake.stash  props.txt  qtvars.pro  qtvars.vcxproj  qtvars.xml
x64/Debug/qt/rcc/: qrc_Calendar.cpp
x64/Debug/qt/uic/: ui_Calendar.h  ui_DayWindow.h  ui_EventEditorDialog.h
